[gd_scene load_steps=2 format=3 uid="uid://c5k6v5tooltip"]

[ext_resource type="Script" path="res://scripts/ui/DamageTooltip.gd" id="1_tooltip"]

[node name="DamageTooltip" type="Control"]
z_index = 100
custom_minimum_size = Vector2(300, 400)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tooltip")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Background/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Card Name"
horizontal_alignment = 1

[node name="BreakdownLabel" type="RichTextLabel" parent="Background/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Damage breakdown..."
scroll_active = false

[node name="EffectsLabel" type="RichTextLabel" parent="Background/Content"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "Effects glossary..."
scroll_active = false

[node name="CloseButton" type="Button" parent="Background/Content"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Close"

